--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -46,3 +46,14 @@ h1 {
     background-color: transparent;
     color: white;
 }
+
+#market_link {
+    color: white;
+    text-decoration: none;
+}
+
+a {
+    z-index: 1;
+    padding: 2em;
+    margin: -2em;
+  }
