Adding comments to code

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -13,6 +13,8 @@ body {
     margin: 0;
 }
 
+
+/*Adding customisation to the buttons*/
 #portfolio__management {
     padding: 20px;
     margin: 50px 50px 50px 0;
