--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading</title>
     <!--Adding in a style sheet for the html file--> 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
