--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading</title>
     <!--Adding in a style sheet for the html file--> 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 
@@ -25,7 +25,9 @@
       </form>  
 
       <div>
-        <p style="color: blue;">{{earned}} </p>
+        {% if earned %}
+        <p style="color: blue;">You could have made ${{earned}}</p>
+        {% endif %}
       </div>
 
     </body>
