--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -26,7 +26,7 @@
 
       <div>
         {% if earned %}
-        <p style="color: blue;">You could have made ${{earned}}</p>
+        <h2 style="color: blue;">You could have made ${{earned}}</h2>
         {% endif %}
       </div>
 
