--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h2>Stock Simulation</h2>
+    <h2>Stock Strategy Tester</h2>
     
     <form class="data-entry" action="/result" method="post">
         <label id="stock_name_lable" for="stock_name">Stock Name:</label><br>
